tests/ui/fail/union.stderr
error: this trait cannot be derived for unions
 --> tests/ui/fail/union.rs:3:10
  |
3 | #[derive(Debug, AsyncDebug)]
  |          ^^^^^

error: unions are not supported
 --> tests/ui/fail/union.rs:3:17
  |
3 | #[derive(Debug, AsyncDebug)]
  |                 ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `AsyncDebug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `async_debug` found for union `Mixed` in the current scope
  --> tests/ui/fail/union.rs:16:31
   |
4  | union Mixed {
   | ----------- method `async_debug` not found for this
...
16 |         format!("{:?}", mixed.async_debug().await),
   |                               ^^^^^^^^^^^ method not found in `Mixed`
